# fail-whale

./: .gitignore  LICENSE  README.md  build.sh  test.sh
.github/workflows/: CI.yaml  Publish.yaml
bash/: README.md  fail-whale.bash
bash/tests/: fail-whale.bats
dotnet/: FailWhale.sln  README.md
dotnet/FailWhale/: FailWhale.csproj
dotnet/FailWhale.Test/: FailWhale.Test.csproj  FailWhaleConsoleTests.cs  FailWhaleExtensionsTests.cs
dotnet/FailWhale.Test/Mock/: ConsoleMock.cs
dotnet/FailWhale/Console/: FailWhaleConsole.cs
dotnet/FailWhale/Logging/: FailWhaleExtension.cs
dotnet/FailWhale/Utility/: FailWhaleBuilder.cs
npm/: README.md  jest.config.js  package.json  test-report.xml  tsconfig.json
npm/src/: fail-whale.ts
npm/src/tests/: fail-whale.test.ts
rust/: Cargo.toml  README.md
rust/src/: lib.rs
