[package]
name = "fail_whale"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Easily print a fail whale!"
repository = "https://github.com/StephenMP/fail-whale"
readme = "README.md"
authors = ["alexpojman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"